fixed alignment

--- a/CSS/INDEX.CSS
+++ b/CSS/INDEX.CSS
@@ -99,7 +99,7 @@ header::after {
 
 .roster1{
 	float: centre;
-	margin: 25px 15px 15px 25px;
+	margin: 25px 15px 25px 15px;
 	width: 560px;
 	height: 560px;
 	border: 5px solid #440a51;
